2007-10-23  Martin Michlmayr <tbm@cyrius.com>	
	    Dorit Nuzman  <dorit@il.ibm.com>

	PR tree-optimization/33860
	* g++.dg/vect/pr33860.cc: New test.
	* g++.dg/vect/pr33860a.cc: New test.

2007-10-23  Tehila Meyzels  <tehila@il.ibm.com>
	    Revital Eres  <eres@il.ibm.com>	 

	*  testsuite/gcc.dg/sms-2.c: New testcase.

2007-10-22  David S. Miller  <davem@davemloft.net>

	* gcc.dg/globalreg-1.c: New test.

2007-10-22  Martin Michlmayr <tbm@cyrius.com>	
	    Dorit Nuzman  <dorit@il.ibm.com>

	PR tree-optimization/33834
	PR tree-optimization/33835
	* g++.dg/vect/pr33834_1.cc: New test.
	* g++.dg/vect/pr33834_2.cc: New test.
	* g++.dg/vect/pr33835.cc: New test.

2007-10-22  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/pr33644.c: New test.

2007-10-22  Jakub Jelinek  <jakub@redhat.com>

	PR c++/33372
	* g++.dg/gomp/pr33372-1.C: New test.
	* g++.dg/gomp/pr33372-2.C: New test.
	* g++.dg/gomp/pr33372-3.C: New test.

2007-10-22  Michael Matz  <matz@suse.de>

	PR tree-optimization/33855
	* gcc.c-torture/compile/pr33855.c: New testcase.

2007-10-22  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/33854
	* gcc.dg/vect/O1-pr33854.c: New testcase.
	* gcc.dg/vect/vect.exp: Run tests starting with "O1-" with -O1.

2007-10-21  David Edelsohn  <edelsohn@gnu.org>

	* gcc.dg/unwind-1.c: Disable on AIX.
	* gcc.dg/cpp/_Pragma6.c: Disable on AIX.

2007-10-21  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/33749
	* gfortran.dg/assign_9.f90: New test.

2007-10-21  Richard Sandiford  <rsandifo@nildram.co.uk>

	* gcc.target/mips/mips.exp (setup_mips_tests): Set mips_mips16.
	(dg-mips-options): Skip tests that specify an ABI other than o32
	and o64 if generating MIPS16 hard-float code.

2007-10-21  Ira Rosen  <irar@il.ibm.com>
            Revital Eres  <eres@il.ibm.com>

	* gcc.dg/vect/vect-ifcvt-5.c: Require vect_int.
	* gcc.dg/vect/vect-16.c: Fix comment.
	* gcc.dg/vect/pr33369.c: Require vect_int.
	* gcc.dg/vect/slp-33.c: Add spaces.