@@ -1,4 +1,10 @@
-2007-10-23  Martin Michlmayr <tbm@cyrius.com>	
+2007-10-23  Martin Michlmayr <tbm@cyrius.com>
+	    Uros Bizjak  <ubizjak@gmail.com>
+
+	PR rtl-optimization/33846
+	* gcc.dg/vect/pr33846.c: New testcase.
+
+2007-10-23  Martin Michlmayr <tbm@cyrius.com>
 	    Dorit Nuzman  <dorit@il.ibm.com>
 
 	PR tree-optimization/33860
@@ -8,13 +14,13 @@
 2007-10-23  Tehila Meyzels  <tehila@il.ibm.com>
 	    Revital Eres  <eres@il.ibm.com>	 
 
-	*  testsuite/gcc.dg/sms-2.c: New testcase.
+	* testsuite/gcc.dg/sms-2.c: New testcase.
 
 2007-10-22  David S. Miller  <davem@davemloft.net>
 
 	* gcc.dg/globalreg-1.c: New test.
 
-2007-10-22  Martin Michlmayr <tbm@cyrius.com>	
+2007-10-22  Martin Michlmayr <tbm@cyrius.com>
 	    Dorit Nuzman  <dorit@il.ibm.com>
 
 	PR tree-optimization/33834
